# TP

.github/workflows/: .git.yml.swp  git.yml
task1/: run.sh
task2/: .CMakeLists.txt.swp  CMakeLists.txt
task2/A/: CMakeLists.txt  preparing.py
task2/B/: CMakeLists.txt  lib.cpp
task2/C/: CMakeLists.txt  main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/src/01-simple-library/: .Functions.cpp.swp
task4/tests/00-aplusb/: .test.cpp.swp
task4/tests/01-simple-library/: .LeapTestCase.cpp.swp  AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: .TreeTestCase.cpp.swp  .TreeTestCase.h.swo  .TreeTestCase.h.swp  TreeTestCase.cpp  TreeTestCase.h
task5/cmake-with-flask/: .Dockerfile.swp  .dockerfile.swp  Dockerfile
task6/.github/workflows/: git.yml
task6/task-ci/: .run.sh.swp  run.sh
task6/task-ci/.github/workflows/: git.yml
